[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/PowerUpCollectionParticle.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.987097 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.509804, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 512

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.277056, 0.69697, 1 )
colors = PoolColorArray( 0.138669, 0.0611725, 0.824219, 1, 1, 1, 0.0235294, 0.764706, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.4
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 17.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -35.0
tangential_accel = 11.51
tangential_accel_random = 1.0
angle = 21.4
scale_random = 1.0
color_ramp = SubResource( 4 )
color_initial_ramp = SubResource( 2 )
hue_variation_random = 1.0

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
vertex_color_use_as_albedo = true
params_blend_mode = 1

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.3, 0.3, 0.3 )

[node name="PowerUpCollectionParticle" type="Spatial"]
script = ExtResource( 1 )

[node name="PowerUpParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0383863, 0, -0.0131407 )
cast_shadow = 0
amount = 60
lifetime = 1.01
preprocess = 0.1
speed_scale = 0.8
explosiveness = 1.0
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 7 )

[node name="DisposeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DisposeTimer" to="." method="_on_DisposeTimer_timeout"]
